nys-109: on mobile, move my senator link to mobile menu, to avoid header element overlap; fix mobile menu scroll issue

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header-user-menu/nysenate-header-user-menu.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header-user-menu/nysenate-header-user-menu.scss
@@ -12,6 +12,12 @@ ul.c-login--list {
   margin-top: 0;
   padding-left: 0;
 
+  @include breakpoint($bp-under-md) {
+    &.desktop-mode {
+      margin-left: 20px;
+    }
+  }
+
   &.mobile-mode {
     width: 100%;
     margin-top: 15px;
