--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header/nysenate-header.scss
@@ -91,6 +91,10 @@
   margin-left: 20px;
   transition: background 0.2s ease;
 
+  @include breakpoint($bp-under-md) {
+    display: none;
+  }
+
   .nys-senator {
     height: 100%;
     margin: 0;
@@ -320,6 +324,7 @@
 
   .c-nav--wrap {
     top: 60px;
+    height: auto;
   }
 
 	.c-nav--toggle {
